// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Layout renders default state for first time user correctly 1`] = `
Array [
  <NavBar
    menuWidth={32}
  />,
  <div
    activeItem=""
    id="LeftMenu"
    isMenuExpanded={true}
    setIsMenuExpanded={[Function]}
  />,
  <div
    className="MuiBox-root MuiBox-root-8 HookGlobalStyles-main-7"
    style={
      Object {
        "marginLeft": 256,
      }
    }
  >
    <div />
  </div>,
]
`;

exports[`component: Layout renders default state for non first time user correctly 1`] = `
Array [
  <NavBar
    menuWidth={32}
  />,
  <div
    activeItem=""
    id="LeftMenu"
    isMenuExpanded={true}
    setIsMenuExpanded={[Function]}
  />,
  <div
    className="MuiBox-root MuiBox-root-12 HookGlobalStyles-main-7"
    style={
      Object {
        "marginLeft": 256,
      }
    }
  >
    <div />
  </div>,
]
`;

exports[`component: Layout renders menu collapsed state 1`] = `
Array [
  <NavBar
    menuWidth={11.5}
  />,
  <div
    activeItem=""
    id="LeftMenu"
    isMenuExpanded={false}
    setIsMenuExpanded={[Function]}
  />,
  <div
    className="MuiBox-root MuiBox-root-14 HookGlobalStyles-main-7"
    style={
      Object {
        "marginLeft": 92,
      }
    }
  />,
  <UnlockPasswordDialog />,
]
`;

exports[`component: Layout renders passwordRequired state for first time user correctly 1`] = `
Array [
  <NavBar
    menuWidth={32}
  />,
  <div
    activeItem=""
    id="LeftMenu"
    isMenuExpanded={true}
    setIsMenuExpanded={[Function]}
  />,
  <div
    className="MuiBox-root MuiBox-root-11 HookGlobalStyles-main-7"
    style={
      Object {
        "marginLeft": 256,
      }
    }
  >
    <GetStarted />
  </div>,
]
`;

exports[`component: Layout renders passwordRequired state for non first time user correctly 1`] = `
Array [
  <NavBar
    menuWidth={32}
  />,
  <div
    activeItem=""
    id="LeftMenu"
    isMenuExpanded={true}
    setIsMenuExpanded={[Function]}
  />,
  <div
    className="MuiBox-root MuiBox-root-13 HookGlobalStyles-main-7"
    style={
      Object {
        "marginLeft": 256,
      }
    }
  />,
  <UnlockPasswordDialog />,
]
`;
